--- a/style.css
+++ b/style.css
@@ -7,8 +7,23 @@
 .header {
     display: flex;
     background-color: rgb(50, 167, 145);
+    justify-content: space-between;
 }
 
 .trybewarts-login {
     display: flex;
+}
+
+main {
+    display: flex;
+}
+
+#evaluation-form {
+    display: flex;
+    width: 675px;
+    flex-direction: column;
+}
+
+#trybewarts-forms-logo {
+    height: 500px;
 }
