--- a/style.css
+++ b/style.css
@@ -37,6 +37,11 @@ main {
     flex-direction: column;
 }
 
+#div4 {
+    display: flex;
+    flex-direction: column;
+}
+
 #trybewarts-forms-logo {
   height: 500px;
 }
